Replace outdated lib to support deprecated jira endpoints
- Plugin for javafx as it would have failures and errors for missing
modules or its access